<resources>
    <string name="app_name1">Project 31 of Android Dev_UI Design1 With Bottom Nav Bar</string>
    <string name="app_name">🛍️🛒 RitikCoder</string>
    <string name="item">Item</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_s_fashion">  TODAY\'S FASHION</string>
    <string name="search_products">Search Products......</string>
    <string name="search_products1">Search Products.....</string>
    <string name="product_categories">PRODUCT CATEGORIES</string>
    <string name="view_all">View All</string>
    <string name="view_all1">View All</string>
    <string name="men">Mens</string>
    <string name="women">Womens</string>
    <string name="kid">Kids</string>
    <string name="laptop">Laptops</string>
    <string name="music">MusicPlayers</string>
    <string name="phone">Phones</string>
    <string name="sunglasses">SunGlasses</string>
    <string name="watches">Watches</string>
    <string name="footwears">FootWears</string>
    <string name="brands_of_the_day">Brands of The Day</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="shop_now">Shop Now</string>
    <string name="price">Price</string>
    <string name="product_description">Product Discription</string>
    <string name="product_name">Product Name</string>
    <string name="notification">Notification</string>
    <string name="suggested_for_you">Suggested for You</string>
    <string name="based_on_your_interest">Based on Your Interest</string>
    <string name="continue_your_shopping">Continue your Shopping</string>
    <string name="that_s_till_the_now">That\'s till the now</string>
    <string name="swip_down">Swip down</string>
    <string name="swipe_down">Swipe down</string>
    <string name="no_internet_connection">- No Internet Connection</string>
    <string name="your_selected_item">Your Selected Item</string>
    <string name="productPrice">productPrice</string>
    <string name="_75_off">75% off</string>
    <string name="buy_now_and_pay_later_with_emi">Buy Now and Pay Later with EMI</string>
    <string name="activate_now">Activate Now</string>
    <string name="productName">ProductName</string>
    <string name="ritikcoder_202280">RitikCoder, 202280</string>
    <string name="deliver_to">Deliver to :</string>
    <string name="change">Change</string>
    <string name="sutyana_gali_number_2_pvt_ltd">Sutyana Gali number 2, Pvt Ltd....</string>
    <string name="productDescription">ProductDescription</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy now</string>
    <string name="free_delivery">FREE Delivery</string>
    <string name="free_delivery1"> FREE Delivery</string>
    <string name="_40">40</string>
    <string name="delivery_by_5_ju_wed">Delivery by 5 Ju, Wed..</string>
    <string name="_7_days_replacement">7 Days Replacement</string>
    <string name="cash_on_delivery_available">Cash On Delivery available</string>
    <string name="plus_r_assured">Plus (R-Assured)</string>
    <string name="all_offers_coupons"><![CDATA[- All Offers & Coupons]]></string>
    <string name="highlights_description"><![CDATA[Highlights & Description]]></string>
    <string name="good">Good</string>
    <string name="_405_ratings_and_18_reviews">405 ratings and 18 reviews</string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="x">x</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home_nav">Home</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="setting">Setting</string>
    <string name="cart_">Cart</string>
    <string name="notification_">Notification</string>
    <string name="category_">Category</string>
    <string name="profile_">Profile</string>
    <string name="all_categories">All Categories</string>
    <string name="grocery">Grocery</string>
    <string name="offer_zone">Offer Zone</string>
    <string name="mobiles">Mobiles</string>
    <string name="fashion">Fashion</string>
    <string name="electronics">Electronics</string>
    <string name="home_">Home</string>
    <string name="personal_care">Personal Care</string>
    <string name="appliances">Appliances</string>
    <string name="toys_baby"><![CDATA[Toys & Baby]]></string>
    <string name="furniture">Furniture</string>
    <string name="flights_hotels"><![CDATA[Flights & Hotels]]></string>
    <string name="insurance">Insurance</string>
    <string name="sports">Sports</string>
    <string name="nutrition_more"><![CDATA[Nutrition & More]]></string>
    <string name="bikes_cars"><![CDATA[Bikes & Cars]]></string>
    <string name="gift_cards">Gift Cards</string>
    <string name="medicines">Medicines</string>
    <string name="home_services">Home services</string>
    <string name="phone_cash">Phone Cash</string>
    <string name="extra">Extra</string>
    <string name="recently_viewed_stores">Recently Viewed Stores</string>
    <string name="super_coin">Super Coin</string>
    <string name="coupons">Coupons</string>
    <string name="money">Money+</string>
    <string name="what_s_new">What\'s New</string>
    <string name="level_up">Level Up</string>
    <string name="fire_drops">Fire Drops</string>
    <string name="games">Games</string>
    <string name="camera">Camera</string>
    <string name="become_a_seller">Become a Seller</string>
    <string name="live_shop">Live Shop+</string>
    <string name="plus_zone">Plus Zone</string>
    <string name="more_on_my_shopping_app">More On My Shopping App</string>
    <string name="trending_stories">Trending Stories</string>
    <string name="order_summary">Order Summary</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="tick">✔</string>
    <string name="address">Address</string>
    <string name="order_summery">Order Summery</string>
    <string name="payment">Payment</string>
    <string name="deliver_to_">Deliver to:</string>
    <string name="ritik_verma">Ritik verma</string>
    <string name="sutyana_gali_number_2_sheela_foam_pvt_ltd_unit_sutyana_greater_noida_201318_9xxxxxxxx8">Sutyana Gali number 2, Sheela Foam Pvt Ltd \nUnit, Sutyana, Greater Noida 201318 \n9XXXXXXXX8</string>
    <string name="donate_to_my_app_foundation">Donate to My App Foundation</string>
    <string name="support_transformative_social_work_in_india">Support transformative social work in India</string>
    <string name="Rs_10">Rs 10</string>
    <string name="Rs_20">Rs 20</string>
    <string name="Rs_40">Rs 40</string>
    <string name="Rs_50">Rs 50</string>
    <string name="note_gst_and_no_cost_emi_will_not_be_applicable">Note: GST and No cost EMI will not be applicable</string>
    <string name="delivery_by_wed_jul_5_free_delivery_40">Delivery by Wed Jul 5 | FREE Delivery 💸 40</string>
    <string name="safe_and_secure_payments_easy_returns_100_authentic_products">Safe and secure payments. Easy returns. 100% Authentic products.</string>
    <string name="payments">Payments</string>
    <string name="_5_cashback_on_flipkart_axis_bank_card">- 5% Cashback on Flipkart Axis Bank Card</string>
    <string name="phonepe_upi">Phonepe UPI</string>
    <string name="_7500xxxxx2_axl"> 7500XXXXX2@axl</string>
    <string name="all_other_options">All other options</string>
    <string name="wallet_postpaid">Wallet / Postpaid</string>
    <string name="credit_debit_atm_card">Credit / Debit / ATM card</string>
    <string name="net_banking">Net Banking</string>
    <string name="emi_easy_installments">EMI (Easy Installments)</string>
    <string name="add_and_secure_your_card_as_per_rbi_guidelines">Add and secure your card as per RBI guidelines</string>
    <string name="this_instrument_has_low_success_use_upi_or_cards_for_better_experience">This instrument has low success, use UPI or cards for better experience</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="pay_only_as_advance_and_balance_amount_as_cash_on_delivery_details">Pay only as advance and balance amount as cash on delivery Details</string>
    <string name="pay_rs_50_now">Pay Rs 50 now</string>
    <string name="unavailable">Unavailable -</string>
    <string name="gift_card">- Gift Card</string>
    <string name="price_1_item">Price (1 item)</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="free">FREE</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="_20000">20000</string>
    <string name="price_details">PRICE DETAILS</string>
    <string name="authentic_products">Authentic Products</string>
    <string name="secure_payments">Secure Payments</string>
    <string name="easy_returns">Easy Returns</string>
    <string name="pay_securely">PAY SECURELY</string>
    <string name="upi">UPI</string>
    <string name="total_amount">Total Amount</string>
    <string name="order_has_been_placed">Order has been Placed</string>
    <string name="your_order_has_been_placed">Your Order has been Placed</string>
    <string name="continue_your_shopping_">🛒 Continue Your Shopping 🛒</string>
    <string name="notifications">Notifications</string>
    <string name="message_1">Message-1</string>
    <string name="subject_of_message">Subject of message</string>
    <string name="time">time</string>
    <string name="cart_of_my_shopping_app">Cart of My Shopping App</string>
    <string name="cart_item_1">Cart item 1</string>
    <string name="remove">Remove</string>
    <string name="cart_item_2">cart item 2</string>
    <string name="profile__">Profile</string>
    <string name="_7xxx7xxx52">7XXX7XXX52</string>
    <string name="profile_name">Profile Name</string>
    <string name="hey_ritik">Hey! Ritik</string>
    <string name="orders">Orders</string>
    <string name="wishlist">Wishlist</string>
    <string name="coupons_">Coupons</string>
    <string name="help_center">Help Center</string>
    <string name="account_settings">Account Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="sopping_plus">Sopping Plus</string>
    <string name="save_cards_wallet"><![CDATA[Save Cards & Wallet]]></string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="select_language">Select Language</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="log_in">Log In</string>
    <string name="log_in_">Log In!</string>
    <string name="welcome_back">Welcome back....</string>
    <string name="user_name">User Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="login">LOGIN</string>
    <string name="register_now">Register Now</string>
    <string name="forget_password">Forget Password</string>
    <string name="login_your_account">Login Your Account</string>
    <string name="signup_your_account">SignUp Your Account</string>
    <string name="sign_up_">Sign Up!</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
</resources>