<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/profile_"/>

        <item android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home_nav"/>

        <item android:id="@+id/nav_Category"
            android:icon="@drawable/baseline_format_list_bulleted_24"
            android:title="@string/category_"/>

        <item android:id="@+id/nav_Notification"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/notification_"/>

        <item android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/cart_"/>

        <item android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting"/>

        <item android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>

        <item android:id="@+id/nav_about_us"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/about_us"/>

    </group>

    <item android:title="">

        <menu>

            <item android:id="@+id/nav_logout"
                android:icon="@drawable/baseline_logout_24"
                android:title="Logout"/>

        </menu>


    </item>


</menu>