<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/homeIcon"/>

    <item android:title="@string/category"
        android:icon="@drawable/baseline_format_list_bulleted_24"
        android:id="@+id/categoryIcon"/>

    <item android:title="@string/notification"
        android:icon="@drawable/baseline_notifications_24"
        android:id="@+id/searchIcon"/>

    <item android:title="@string/cart"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:id="@+id/cartIcon"/>

    <item android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"
        android:id="@+id/profileIcon"/>

</menu>