<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#7C4CD3">

            <TextView
                android:id="@+id/textViewForLoginActivityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/login_your_account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/baseline_keyboard_backspace_24" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_back"
                    android:textColor="@color/blue"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in_"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="280dp"
                android:layout_gravity="center"
                android:src="@drawable/shopping_model"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextForUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_layout_bg"
                android:hint="@string/user_name"
                android:textColor="@color/black"
                android:textColorHint="#CDDF18"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextForUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/text_input_layout_bg"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/forget_password"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textViewToOpenSingUpActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/register_now"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonForLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:text="@string/login"
            android:textColor="#D2E60C"
            android:background="@drawable/text_input_layout_bg"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>