<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="90dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#7C4CD3">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/profile__"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:elevation="25sp"
                app:cardCornerRadius="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@drawable/navigation_view_bg"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/image6"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/my_dp"
                        app:civ_border_color="#2196F3"
                        app:civ_border_width="3dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginTop="30sp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/profile_name"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_7xxx7xxx52"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/hey_ritik"
                android:textColor="#E80B56"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                android:elevation="25sp"
                app:cardCornerRadius="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/teal_200"
                        android:textColor="@color/black"
                        android:layout_marginEnd="20sp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/orders"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/teal_200"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:drawableStart="@drawable/baseline_favorite_border_24"
                        android:text="@string/wishlist"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="20sp"
                        android:text="@string/coupons_"
                        android:backgroundTint="@color/teal_200"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="NestedWeights" />

                    <Button
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/teal_200"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/help_center"/>

                </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>





            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:elevation="25sp"
                app:cardCornerRadius="20sp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_settings"
                        android:textColor="@color/black"
                        android:layout_marginStart="10dp"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/edit_profile"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="25sp"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/baseline_person_24"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sopping_plus"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="25sp"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/baseline_add_24"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/save_cards_wallet"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="25sp"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/baseline_shopping_cart_24"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/saved_addresses"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="25sp"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/baseline_location_on_24"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/select_language"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="25sp"
                        android:textSize="20sp"
                        app:drawableStartCompat="@drawable/baseline_language_24"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/notification_settings"
                        android:textColor="@color/black"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginTop="25sp"
                        android:textSize="20sp"
                        android:layout_marginBottom="20sp"
                        app:drawableStartCompat="@drawable/ic_notifications_black_24dp"
                        app:drawableEndCompat="@drawable/baseline_keyboard_arrow_right_24" />





                </LinearLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20sp"
                android:backgroundTint="@color/white"
                android:elevation="25sp"
                app:cardCornerRadius="20sp">

                <TextView
                    android:id="@+id/textViewForLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/blue"
                    android:layout_margin="10dp"
                    android:textSize="22sp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textStyle="bold" />



            </androidx.cardview.widget.CardView>







        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>